fixed menu clipping 2

--- a/style.css
+++ b/style.css
@@ -22,6 +22,8 @@ body, html {
 header {
 	display: flex;
 	padding: 10px;
+	flex-basis: 70px;
+	flex-shrink: 0;
 }
 
 header a.logo {
